--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,6 @@
 @import "base/variables.scss";
 @import "base/general.scss";
 @import "components/header.scss";
+@import "components/banner.scss";
+@import "components/footer.scss";
+@import "components/donate.scss";
