--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,11 +1,15 @@
 <section class="header">
-	<div class="wrapper header__navigation">
-		<div class="header-logo"><a href="index.html"><img src="img/logoChurch.svg"></a></div>
-		<ul class="header-menu">
-			<li class="header-menu--item"><a href="">Сборник песен</a></li>
-			<li class="header-menu--item"><a href="">Распевки</a></li>
-			<li class="header-menu--item"><a href="chords.html">Аккорды</a></li>
-			<li class="header-menu--item"><a href="donate.html">Поддержать проект</a></li>
-		</ul>
-	</div>
+    <div class="wrapper header__navigation">
+        <div class="header-logo"><a href="index.html">
+
+			//= logoChurch.html
+
+		</a></div>
+        <ul class="header-menu">
+            <li class="header-menu--item"><a href="collections.html">Сборник песен</a></li>
+            <li class="header-menu--item"><a href="">Распевки</a></li>
+            <li class="header-menu--item"><a href="chords.html">Аккорды</a></li>
+            <li class="header-menu--item"><a href="donate.html">Поддержать проект</a></li>
+        </ul>
+    </div>
 </section>
