--- a/src/scss/components/donate.scss
+++ b/src/scss/components/donate.scss
@@ -3,27 +3,26 @@
     background-size: cover;
     min-height: 100vh;
     width: 100%;
-    
+}
+
 .donate__containter {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 200px;
 }
 
 
-    .donate__yandex {
-        width: 350px;
-    	margin-left: 50px;
+.donate__yandex {
+    width: 350px;
 
-    }
+}
 
-    .donate__about {
-	color: white;
-	font-size: 22px;
-	width: 620px;
-	text-align: center;
-	padding: 35px;
-	text-shadow: black 2px 2px 5px;
-    }
+.donate__about {
+    color: white;
+    font-size: 22px;
+    width: 620px;
+    text-align: center;
+    padding-right: 100px;
+    text-shadow: black 2px 2px 5px;
 }
