--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,17 +1,21 @@
 .footer {
-	position: absolute;
-	bottom: 0;
-	padding: 20px 0;
-	color: white;
-	margin: 0 auto;
-	left: 50%;
-	transform: translateX(-50%);
+    position: absolute;
+    bottom: 0;
+    padding: 20px 0;
+    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .footer__content {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.left-container {
+    color: white;
 }
 
 .icons-container {
@@ -43,4 +47,15 @@
 
 .social-youtube {
     background-position-x: -210px;
+}
+
+
+.black__footer {
+    .left-container {
+        color: black;
+    }
+
+    .icon {
+        background-image: url(../img/socialBlack.svg);
+    }
 }
