--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,8 +1,13 @@
 .header__navigation {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-weight: 600;
+    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
+
 
 }
 
@@ -25,5 +30,22 @@
         text-decoration: none;
         color: white;
     }
+
+}
+
+.black__header {
+    .header-menu {
+        a {
+            color: black;
+        }
+    }
+
+.logo__church {
+    stroke: black;
+}
+
+
+
+
 
 }
