--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,4 @@
 @import "components/banner.scss";
 @import "components/footer.scss";
 @import "components/donate.scss";
+@import "components/admin-panel.scss";
