admin_page modification

--- a/src/components/admin-panel.html
+++ b/src/components/admin-panel.html
@@ -5,11 +5,12 @@
 
 		</a>
         <p class="admin__text --uppercase">Консоль управления контентом</p>
+        <input class="addSong" type="image" src="/img/plus.svg" title="Добавить песню">
     </div>
     <div class="songContent">
         <form class="song__search">
             <input class="__search__form" type="search" name="find_song" placeholder="Найти песню">
-            <input type="submit" value="Найти">
+            <input class="__search__submit" type="image" src="/img/loupe.svg" title="Найти">
         </form>
         <ul class="songList">
         	<li class="songList__item">Я буду славить</li>
