--- a/src/scss/components/admin-panel.scss
+++ b/src/scss/components/admin-panel.scss
@@ -13,7 +13,7 @@
 		padding: 5px;
 		
 		&:nth-last-child {
-			border-bottom: 2px solid gray;
+			border-bottom: 1px solid gray;
 		}
 	}
 }
@@ -25,6 +25,12 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+
+		.__search__submit {
+			width: 34px;
+			height: 34px;
+			padding-left: 10px;
+		}
 
 	}
 }
@@ -41,7 +47,13 @@
 	background-color: black;
 	display: flex;
 	align-items: center;
-	padding: 0px 60px;
+	padding: 0px 70px;
+	justify-content: space-around;
+
+	.addSong {
+		width: 40px;
+		height: 40px;
+	}
 }
 
 .admin__footer {
