--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,6 +1,6 @@
 <section class="footer">
     <div class="wrapper footer__content">
-        <div class="left-container"> <span> Copyright © 2018 Dmitriy Kovalev. All rights reserved </span></div>
+        <div class="left-container"> <span> Copyright © 2018 WorshipDom. All rights reserved </span></div>
         <div class="right-container">
             <ul class="icons-container">
                 <li><a href="#" class="icon social-vk"></a></li>
