--- a/src/components/header.html
+++ b/src/components/header.html
@@ -6,7 +6,7 @@
 
 		</a></div>
         <ul class="header-menu">
-            <li class="header-menu--item"><a href="collections.html">Сборник песен</a></li>
+            <li class="header-menu--item"><a href="songs.html">Песенник</a></li>
             <li class="header-menu--item"><a href="">Распевки</a></li>
             <li class="header-menu--item"><a href="chords.html">Аккорды</a></li>
             <li class="header-menu--item"><a href="donate.html">Поддержать проект</a></li>
