--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,4 @@
 @import "components/footer.scss";
 @import "components/donate.scss";
 @import "components/admin-panel.scss";
+@import "components/songs.scss";
