--- a/src/components/banner.html
+++ b/src/components/banner.html
@@ -1,7 +1,11 @@
 <section class="banner">
-        <div class="welcome__lyric">
-        <p>Входите во врата Его со славословием,<br>
-            во дворы Его - с хвалою.<br>
-            Славьте Его, благословляйте имя Его.</p>
+    //= header.html
+    <div class="banner__content">
+        <div class="content__welcome-lyrics">
+            <p class="lyrics__text">Входите во врата Его со славословием,<br>
+                во дворы Его - с хвалою.<br>
+                Славьте Его, благословляйте имя Его.</p>
+        </div>
     </div>
+    //= footer.html
 </section>
