--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,7 +1,7 @@
 <section class="footer">
     <div class="wrapper footer__content">
-        <div class="left-container"> <span> Copyright © 2018 WorshipDom. All rights reserved </span></div>
-        <div class="right-container">
+        <div class="footer__left-container"> <span> Copyright © 2018 WorshipDom. All rights reserved </span></div>
+        <div class="footer__right-container">
             <ul class="icons-container">
                 <li><a href="#" class="icon social-vk"></a></li>
                 <li><a href="#" class="icon social-facebook"></a></li>
