--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,14 +1,10 @@
-.header__navigation {
-    position: fixed;
+.header__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-weight: 600;
+    font-weight: 400;
     margin: 0 auto;
-    left: 50%;
-    transform: translateX(-50%);
-
-
+ 
 }
 
 .header-menu {
@@ -18,7 +14,7 @@
     justify-content: center;
     align-items: center;
 
-    .header-menu--item {
+    .header-menu__item {
         font-size: 16px;
     }
 
@@ -33,7 +29,7 @@
 
 }
 
-.black__header {
+.songs__header--black {
     .header-menu {
         a {
             color: black;
