--- a/src/scss/components/songs.scss
+++ b/src/scss/components/songs.scss
@@ -1,69 +1,77 @@
 .songs {
-    background: url('../img/songsBackground.jpg') no-repeat 0 0;
-    background-size: cover;
+    background-color: #052333;
     min-height: 100vh;
-    width: 100%;
 }
 
 .songs__container {
+    min-height: calc(100vh - 220px);
+    width: 100%;
     display: grid;
-    padding-top: 120px;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-gap: 10px;
     grid-template-areas:
-        "sl st st st sf";
-}
+        "sl st sf";
 
-.songs__nav {
-    grid-area: sl;
-    min-height: 80vh;
 
-    .__search__song {
+    .container__list {
+        grid-area: sl;
+
+        .search__form {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+
+            #search__button {
+                width: 24px;
+                height: 24px;
+                padding: 0px 10px;
+            }
+
+
+        }
+
+        .list-songs {
+            display: flex;
+            flex-direction: column;
+            padding: 0px 25px;
+
+            .list-songs__item {
+                padding: 10px 0px;
+            }
+
+            .list-songs__link {
+                text-decoration: none;
+                color: $white;
+            }
+        }
+
+    }
+
+    .container__text {
+        grid-area: st;
+        background-color: white;
+        border-radius: 10px;
+    }
+
+    .container__features {
+        grid-area: sf;
+        
+
+        .features__name {
+            color: $white;
+            font-size: 16px;
+            text-transform: uppercase;
+            padding: 10px 0px;
+        }
+    }
+
+    .alignment {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: flex-start;
         align-items: center;
-
-        .__search__field {}
-
-        .__search__submit {
-            width: 34px;
-            height: 34px;
-            padding-left: 10px;
-
-        }
-
     }
 
-    li {
-        border-top: 1px solid black;
-        padding: 5px;
 
-        &:nth-last-child {
-            border-bottom: 1px solid black;
-        }
-    }
-
-}
-
-.song__text {
-    grid-area: st;
-    min-height: 80vh;
-}
-
-.song__feauters {
-    grid-area: sf;
- 	min-height: 80vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-
-
-    a {
-        padding-top: 20px;
-        cursor: pointer;
-    }
-
-    p {
-        font-weight: 700;
-    }
 }
