--- a/src/components/admin-panel.html
+++ b/src/components/admin-panel.html
@@ -1,39 +1,41 @@
-<section class="adminPanel">
-    <div class="admin__header"><a href="index.html">
+<section class="admin-panel">
+    <div class="wrapper admin__header"><a href="index.html">
 
-			//= logoChurch.html
+            //= logoChurch.html
 
-		</a>
+        </a>
         <p class="admin__text --uppercase">Консоль управления контентом</p>
-        <input class="addSong" type="image" src="/img/plus.svg" title="Добавить песню">
+        <input class="admin__add-song" type="image" src="/img/plus.svg" title="Добавить песню">
     </div>
-    <div class="songContent">
-        <form class="song__search">
-            <input class="__search__form" type="search" name="find_song" placeholder="Найти песню">
-            <input class="__search__submit" type="image" src="/img/loupe.svg" title="Найти">
-        </form>
-        <ul class="songList">
-        	<li class="songList__item">Я буду славить</li>
-        	<li class="songList__item">Я буду славить</li>
-        	<li class="songList__item">Я буду славить</li>
-
-        </ul>
+    <div class="songs__container">
+        <div class="container__list">
+            <form class="search__form">
+                <input id="search__input" type="search" placeholder="Найти песню">
+                <input id="search__button" type="image" src="/img/search.svg" title="Найти" alt="Найти песню">
+            </form>
+            <ul class="list-songs">
+                <li class="list-songs__item"><a class="list-songs__link" href="">Песня 1</a></li>
+                <li class="list-songs__item"><a class="list-songs__link" href="">Песня 2</a></li>
+                <li class="list-songs__item"><a class="list-songs__link" href="">Песня 3</a></li>
+                <li class="list-songs__item"><a class="list-songs__link" href="">Песня 4</a></li>
+                <li class="list-songs__item"><a class="list-songs__link" href="">Песня 5</a></li>
+            </ul>
+        </div>
+        <disv class="container__text alignment">
+            <form class="text__admin-edit alignment">
+                <p class="admin-edit__header">Название песни:</p>
+                <input id="song-name" name="song-name" type="text" placeholder="Название песни">
+                <p class="admin-edit__header">Текст песни:</p>
+                <textarea id="song-text" name="song-text"></textarea>
+                <p class="admin-edit__header">Ссылка на ноты:</p>
+                <input id="song-notes" name="song-notes" type="text" placeholder="http://worship.odomkrd.ru/notes/">
+                <p class="admin-edit__header">Ссылка на презентацию:</p>
+                <input id="song-presentation" name="song-presentation" type="text" placeholder="http://worship.odomkrd.ru/presentation/">
+                <input id="song-save" type="button" name="admin-edit__save" value="Сохранить">
+            </form>
     </div>
-    <div class="songEdit">
-    	<form class="songEditForm">
-    		<label for="songName">Название песни</label> <br>
-    		<input type="text" id="songName"><br>
-    		<label for="songLyrics">Текст песни</label><br>
-			<textarea id="songLyrics"></textarea><br>
-			<input type="submit" id="saveSong" value="Сохранить">
-
-
-
-    	</form>
-
-
     </div>
     <div class="admin__footer">
-        <span class="admin__text"> Copyright © 2018 Dmitriy Kovalev. All rights reserved </span>
+        <span class="footer__info"> Copyright © 2018 WorshipDom. All rights reserved </span>
     </div>
 </section>
