search__input border radius

--- a/src/scss/components/songs.scss
+++ b/src/scss/components/songs.scss
@@ -22,6 +22,10 @@
             justify-content: center;
             padding: 10px;
 
+            #search__input {
+                border-radius: 5px;
+            }
+
             #search__button {
                 width: 24px;
                 height: 24px;
