--- a/src/components/songs-content.html
+++ b/src/components/songs-content.html
@@ -19,9 +19,9 @@
         <div class="container__features alignment">
             <div class="features__vocal-part alignment">
                 <p class="features__name">Партия:</p>
-                <a class="features__link" href=""><img src="/img/mainVoice.png"></a>
-                <a class="features__link" href=""><img src="/img/altVoice.png"></a>
-                <a class="features__link" href=""><img src="/img/tenorVoice.png"></a>
+                <a class="features__link" href=""><span class="voiceTone">Основная</span></a>
+                <a class="features__link" href=""><span class="voiceTone">Альт</span></a>
+                <a class="features__link" href=""><span class="voiceTone">Тенор</span></a>
             </div>
             <div class="features__notes alignment">
                 <p class="features__name">Ноты:</p>
