--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -20,6 +20,31 @@
 
     li {
         margin: 20px;
+        position: relative;
+        padding-bottom: 2px;
+
+        &:after {
+                display: block;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                content: "";
+                height: 1px;
+                width: 0%;
+                background: #ffffff;
+                -webkit-transition: width .3s ease-in-out;
+                transition: width .3s ease-in-out;
+
+
+            }
+
+            &:hover {
+                &:after {
+
+                    width: 100%;
+                }
+
+            }
     }
 
     a {
