--- a/src/components/songs-content.html
+++ b/src/components/songs-content.html
@@ -15,6 +15,30 @@
             </ul>
         </div>
         <div class="container__text">
+            <p>
+                <span class="title">КАК ТЫ ПРЕКРАСЕН</span><br>
+<br>Cm<br>
+Как Ты прекрасен, прекрасен! <br>
+B <br>
+Ты лучше тысячи других!<br>
+G <br>
+Ты мой Господь, Иисус! <br>
+Cm G <br>
+Жизнь моя, свет моей души<br>
+Припев:<br>
+Cm <br>
+Как Ты прекрасен, Иисус! <br>
+Ab <br>
+Твое величье царит!<br>
+Fm <br>
+Ты лучше всех на земле!<br>
+G <br>
+Свет моей души!<br>
+Я положу, как печать <br>
+Тебя на сердце мое <br>
+Твоя любовь, как огонь <br>
+Не погасить ее!
+            </p>
         </div>
         <div class="container__features alignment">
             <div class="features__vocal-part alignment">
