--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,13 +1,14 @@
 <section class="footer">
     <div class="wrapper footer__content">
-        <div class="footer__left-container"> <span> Copyright © 2018 WorshipDom. All rights reserved </span></div>
-        <div class="footer__right-container">
+        <!--<div class="footer__left-container">-->
+        <span> Copyright © 2019 WorshipDom. All rights reserved </span>
+        <!-- <div class="footer__right-container">
             <ul class="icons-container">
                 <li><a href="#" class="icon social-vk"></a></li>
                 <li><a href="#" class="icon social-facebook"></a></li>
                 <li><a href="#" class="icon social-instagram"></a></li>
                 <li><a href="#" class="icon social-youtube"></a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </section>
