--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 5px 0;
+    padding: 50px 0;
     margin: 0 auto;
 }
 
@@ -7,11 +7,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-
-.footer__left-container {
     color: white;
+    text-transform: uppercase;
 }
 
 .icons-container {
